--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    Body of the page is now edited
+    Body of the page is now edited 
+    <p>
+        inside the bodyy
+    </p>
 </body>
 </html>
